--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,10 @@ body {
 }
 
 .main-container {
-  max-width: 500px;
+  max-width: 600px;
   display: flex;
   place-self: center;
+  align-self: center;
   border: 1px solid grey;
   flex-direction: row;
   flex-wrap: wrap;
