campo IP ajustado

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ input {
   padding: 10px;
   height: 30px;
   font-size: large;
-  max-width: 350px;
+  /* max-width: 350px; */
 }
 
 input::placeholder {
@@ -36,12 +36,12 @@ input::placeholder {
 }
 
 .main-container {
-  width: 700px;
+  max-width: 700px;
 }
 
 .grid-container {
   display: grid;
-  grid-template-columns: 350px 150px;
+  grid-template-columns: 1fr 1fr;
   justify-content: space-between;
   gap: 5px;
 }
@@ -77,6 +77,8 @@ input::placeholder {
 
 .cidr-field {
   grid-area: cidr;
+  width: 100px;
+  place-self: end;
 }
 
 #btn-calcular {
@@ -124,7 +126,7 @@ input::placeholder {
 .ip-input-container {
   display: flex;
   flex-direction: row;
-  gap: 10px;
+  gap: 5px;
   align-items: baseline;
 }
 
@@ -134,5 +136,5 @@ input::placeholder {
 }
 
 .ip-input {
-  width: 100px;
+  width: 116px;
 }
