--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,11 +32,11 @@ input {
 }
 
 input::placeholder {
-  font-size: medium;
+  /* font-size: small; */
 }
 
 .main-container {
-  max-width: 700px;
+  max-width: 550px;
 }
 
 .grid-container {
@@ -147,5 +147,5 @@ input::placeholder {
 }
 
 .ip-input {
-  width: 116px;
+  width: 75px;
 }
