--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,6 +85,7 @@ input {
   font-weight: 600;
   border-radius: 10px;
   border: none;
+  cursor: pointer;
 }
 
 #btn-calcular:hover {
@@ -151,4 +152,8 @@ input {
 
 .ip-input {
   width: 75px;
+}
+
+#detalhes {
+  height: 200px;
 }
