logica layout finalizados. testes iniciais ok. enviado para producao

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
+@import url("https://fonts.googleapis.com/css2?family=Poiret+One&family=Roboto+Flex:opsz,wght@8..144,100..1000&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap");
+
 * {
   box-sizing: border-box;
   padding: 0;
   margin: 0;
   text-decoration: none;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-family: "Roboto";
 }
 
 body {
@@ -22,12 +24,31 @@ h1 {
 label {
   padding-bottom: 10px;
   font-size: large;
+  font-weight: 600;
 }
 
 input {
   padding: 10px;
   height: 30px;
   font-size: large;
+}
+
+span {
+  font-weight: 800;
+  font-size: large;
+}
+
+p {
+  display: flex;
+  justify-content: space-between;
+}
+
+#pTitulo {
+  font-size: large;
+  padding-bottom: 10px;
+  font-weight: 600;
+  text-align: center;
+  display: block;
 }
 
 .main-container {
