--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,13 +12,15 @@ body {
   height: 100vh;
   width: 100vw;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-color: #e9ecef;
+  background-color: #282a36;
 }
 
 h1 {
   padding-bottom: 25px;
+  color: #e9ecef;
 }
 
 label {
@@ -180,8 +182,6 @@ p {
 }
 
 #pFooter {
-  position: relative;
-  bottom: -47vh;
-  left: -65vw;
   padding-left: 20px;
+  color: #e9ecef;
 }
