teste de cores bg

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,7 @@ body {
   align-items: center;
   background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
   /* background: linear-gradient(135deg, #005ca9, #ed1c24); */
+  /* background: linear-gradient(135deg, #003f6f, #005ca9, #c8102e, #ed1c24); */
 }
 
 h1 {
