--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,7 +53,7 @@ p {
   color: #020024;
 }
 
-#pTitulo {
+#paragrafoTitulo {
   font-size: clamp(0.5rem, 1.2rem, 1.5rem);
   padding-bottom: 10px;
   font-weight: 600;
@@ -105,27 +105,6 @@ p {
   grid-area: cidr;
   width: 6.25rem;
   place-self: end;
-}
-
-#btn-calcular {
-  grid-area: btn;
-  height: 2.5rem;
-  background: linear-gradient(to right, #4e54c8, #8f94fb);
-  color: white;
-  font-size: clamp(0.5rem, 1.2rem, 1.5rem);
-  font-weight: 600;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
-  transition: 0.2s;
-}
-
-#btn-calcular:hover {
-  transform: scale(1.05);
-  background: linear-gradient(to right, #a8c0ff, #3f2b96);
-}
-#btn-calcular:active {
-  transform: scale(0.95);
 }
 
 .form-resultado {
@@ -190,9 +169,9 @@ p {
   height: 12.5rem;
 }
 
-#pFooter {
+#paragrafoFooter {
   padding-left: 20px;
   color: #e9ecef;
   position: relative;
-  bottom: -2rem;
+  bottom: -10vh;
 }
