--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,3 +184,9 @@ p {
 #paragrafoFooter p {
   color: #e9ecef;
 }
+
+.ipRange {
+  font-size: clamp(0.5vw, 2vw, 2.5vw);
+  font-weight: 600;
+  justify-content: center;
+}
