--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -169,9 +169,10 @@ p {
   width: 4.6rem;
 }
 
-#detalhes {
+/* Retirado temporariamente para testar container detalhes flexivel com novo campo de listar intervalo de ip's */
+/* #detalhes {
   height: 12.5rem;
-}
+} */
 
 #paragrafoFooter {
   height: 6vh;
@@ -185,3 +186,8 @@ p {
   color: #e9ecef;
 }
 
+#paragraIntervalo,
+#paragrafoListaIPs {
+  font-weight: 800;
+  font-size: clamp(0.5rem, 1.2rem, 1.5rem);
+}
