--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,8 +186,11 @@ p {
   color: #e9ecef;
 }
 
-#paragraIntervalo,
-#paragrafoListaIPs {
+.container-p {
   font-weight: 800;
   font-size: clamp(0.5rem, 1.2rem, 1.5rem);
+}
+
+.displayToggle {
+  display: none;
 }
