add function em btnCalcular

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -194,3 +194,12 @@ p {
 .displayToggle {
   display: none;
 }
+
+#btnCalcular {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+#btnCalcular:hover {
+  cursor: pointer;
+}
